2011-10-06  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: saving JavaScript after live edit resets scroller position.
        https://bugs.webkit.org/show_bug.cgi?id=69340

        Do not recreate SourceFrame when content is changed. Instead, update text model in existing SourceFrame.

        Reviewed by Yury Semikhatsky.

        * inspector/front-end/DebuggerPresentationModel.js:
        (WebInspector.DebuggerPresentationModel.prototype.setScriptSource.didEditScriptSource):
        (WebInspector.DebuggerPresentationModel.prototype.setScriptSource):
        * inspector/front-end/JavaScriptSourceFrame.js:
        (WebInspector.JavaScriptSourceFrame):
        * inspector/front-end/RawSourceCode.js:
        (WebInspector.RawSourceCode.prototype.setCompilerSourceMappingProvider):
        * inspector/front-end/SourceFrame.js:
        (WebInspector.SourceFrame.prototype._setReadOnly):
        (WebInspector.SourceFrame.prototype.contentChanged):
        * inspector/front-end/UISourceCode.js:
        (WebInspector.UISourceCode.prototype.contentChanged):

2011-10-10  Ilya Tikhonovsky  <loislo@chromium.org>

        Unreviewed test fix for r97050.

        * inspector/front-end/DebuggerPresentationModel.js:
        (WebInspector.DebuggerPresentationModel.prototype._debuggerReset):

2011-10-10  Andreas Kling  <kling@webkit.org>

        Shrink RenderListItem on 64-bit.
        https://bugs.webkit.org/show_bug.cgi?id=69751

        Reviewed by Kenneth Rohde Christiansen.

        Rearrange members to utilize the padding at the end of RenderBlock.
        This shrinks RenderListItem by 8 bytes on 64-bit, reducing memory consumption
        by 60 kB when loading the full HTML5 spec.

        * rendering/RenderListItem.h:

2011-10-10  Andreas Kling  <kling@webkit.org>

        Shrink RootInlineBox.
        https://bugs.webkit.org/show_bug.cgi?id=69707

        Reviewed by Antti Koivisto.
