@@ -1,3 +1,15 @@
+2011-10-10  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Web Inspector: memory leak in Resource panel.
+        https://bugs.webkit.org/show_bug.cgi?id=69754
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/front-end/ResourcesPanel.js:
+        (WebInspector.ResourcesPanel.prototype.reset):
+        * inspector/front-end/View.js:
+        (WebInspector.View.prototype.childViews):
+
 2011-10-06  Pavel Podivilov  <podivilov@chromium.org>
 
         Web Inspector: saving JavaScript after live edit resets scroller position.
